[package]
name = "raingame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.5"
crossterm = "0.17.7"
ncurses = "5.99"
tokio = { version = "1.28.0", features = ["full"] }
clap = { version = "4.2.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
